# yapo-articles-RU

./: README.rst  pyproject.toml  setup.py  tox.ini
src/: yapo_articles_ru.py
src/time_series/: post.ipynb
