[tool.poetry]
name = "yapo_articles_ru"
version = "0.1.0"
description = "yapo library blog articles in Russian"
authors = [
    "Alexander Myltsev",
    "Sergey Kikevich",
]
licence = "MIT"
readme = "README.rst"
homepage = "https://github.com/okama-io/yapo-articles-RU"
repository = "https://github.com/okama-io/yapo-articles-RU"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: IPython",
    "Framework :: Jupyter",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

keywords = [
    "Modern portfolio theory",
    "Financial library",
    "Asset allocation",
    "Portfolio investments",
    "Financial operations",
    "Financial analysys",
    "Quantitative finance",
]

[tool.poetry.dependencies]
python = "^3.6"
yapo = { git = "https://github.com/okama-io/yapo.git", rev = "dbf0885993" }
numpy = "^1.16"
pandas = "^0.24"

[tool.poetry.dev-dependencies]
pytest = "^4.5"
jupyterlab = "^0.35.6"
nbval = "^0.9.1"
nbdime = "^1.0"

[build-system]
requires = ["poetry >= 0.12, <1"]
python = ">=3.6, <4"
build-backend = "poetry.masonry.api"
